hetzner/deployments/hcloud-autoscaler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler
  namespace: kube-system
  labels:
    app: cluster-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-autoscaler
  template:
    metadata:
      labels:
        app: cluster-autoscaler
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8085'
    spec:
      serviceAccountName: cluster-autoscaler
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
      containers:
        - name: cluster-autoscaler
          # image: k8s.gcr.io/autoscaling/cluster-autoscaler:v1.23.1
          image: ghcr.io/sergelogvinov/cluster-autoscaler-amd64:dev
          name: cluster-autoscaler
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - ./cluster-autoscaler
            - --cloud-provider=hetzner
            - --stderrthreshold=info
            - --node-deletion-delay-timeout=10m0s
            - --scan-interval=3m
            - --regional
            - --balance-similar-node-groups
            - --nodes=0:2:CPX31:NBG1:worker-nbg1
            - --nodes=0:2:CPX31:FSN1:worker-fsn1
            - --nodes=0:2:CPX31:HEL1:worker-hel1
            - --v=1
