hetzner/deployments/hcloud-cloud-controller-manager.yaml
# NOTE: this release was tested against kubernetes v1.18.x
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcloud-cloud-controller-manager
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hcloud-cloud-controller-manager
  template:
    metadata:
      labels:
        app: hcloud-cloud-controller-manager
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: cloud-controller-manager
      dnsPolicy: Default
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
        node.cloudprovider.kubernetes.io/platform: hcloud
      tolerations:
        - key: "node.cloudprovider.kubernetes.io/uninitialized"
          value: "true"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/control-plane"
          effect: NoSchedule
      containers:
        - image: hetznercloud/hcloud-cloud-controller-manager:v1.17.2
          name: hcloud-cloud-controller-manager
          args:
            - --cloud-provider=hcloud
            - --allow-untagged-cloud
            - --controllers=cloud-node-lifecycle
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
