hetzner/deployments/hcloud-csi-result.yaml
---
# Source: hcloud-csi/templates/node/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hcloud-csi-node
  namespace: "kube-system"
  labels:
    app.kubernetes.io/name: hcloud-csi
    helm.sh/chart: hcloud-csi-2.9.0
    app.kubernetes.io/instance: hcloud-csi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: node
    app: hcloud-csi 
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: hcloud-csi
      app.kubernetes.io/instance: hcloud-csi
      app.kubernetes.io/component: node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hcloud-csi
        helm.sh/chart: hcloud-csi-2.9.0
        app.kubernetes.io/instance: hcloud-csi
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: node
    spec:
      
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: instance.hetzner.cloud/is-root-server
                operator: NotIn
                values:
                - "true"
      nodeSelector:
        node.cloudprovider.kubernetes.io/platform: hcloud
      tolerations:
        - effect: NoExecute
          operator: Exists
        - effect: NoSchedule
          operator: Exists
        - key: CriticalAddonsOnly
          operator: Exists
      priorityClassName: "system-node-critical"
      securityContext:
        fsGroup: 1001
      containers:
        - name: csi-node-driver-registrar
          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.11.1
          imagePullPolicy: IfNotPresent
          args:
            - --kubelet-registration-path=/var/lib/kubelet/plugins/csi.hetzner.cloud/socket
          volumeMounts:
            - name: plugin-dir
              mountPath: /run/csi
            - name: registration-dir
              mountPath: /registration
          resources:
            limits: {}
            requests: {}
        - name: liveness-probe
          image: registry.k8s.io/sig-storage/livenessprobe:v2.13.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /run/csi
            name: plugin-dir
          resources:
            limits: {}
            requests: {}
        - name: hcloud-csi-driver
          image: docker.io/hetznercloud/hcloud-csi-driver:v2.9.0 # x-release-please-version
          imagePullPolicy: IfNotPresent
          command: [/bin/hcloud-csi-driver-node]
          volumeMounts:
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: plugin-dir
              mountPath: /run/csi
            - name: device-dir
              mountPath: /dev
          securityContext:
            privileged: true
          ports:
            - name: healthz
              protocol: TCP
              containerPort: 9808
          resources:
            limits: {}
            requests: {}
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /healthz
              port: healthz
      volumes:
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/csi.hetzner.cloud/
            type: DirectoryOrCreate
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: device-dir
          hostPath:
            path: /dev
            type: Directory
---
# Source: hcloud-csi/templates/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcloud-csi-controller
  namespace: "kube-system"
  labels:
    app.kubernetes.io/name: hcloud-csi
    helm.sh/chart: hcloud-csi-2.9.0
    app.kubernetes.io/instance: hcloud-csi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
    app: hcloud-csi-controller 
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: hcloud-csi
      app.kubernetes.io/instance: hcloud-csi
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hcloud-csi
        helm.sh/chart: hcloud-csi-2.9.0
        app.kubernetes.io/instance: hcloud-csi
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: hcloud-csi-controller
      
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      priorityClassName: "system-cluster-critical"
      securityContext:
        fsGroup: 1001
      containers:
        - name: csi-attacher
          image: registry.k8s.io/sig-storage/csi-attacher:v4.6.1
          imagePullPolicy: IfNotPresent
          resources:
            limits: {}
            requests: {}
          args:
            - --default-fstype=ext4
          volumeMounts:
          - name: socket-dir
            mountPath: /run/csi

        - name: csi-resizer
          image: registry.k8s.io/sig-storage/csi-resizer:v1.11.2
          imagePullPolicy: IfNotPresent
          resources:
            limits: {}
            requests: {}
          volumeMounts:
          - name: socket-dir
            mountPath: /run/csi

        - name: csi-provisioner
          image: registry.k8s.io/sig-storage/csi-provisioner:v5.0.2
          imagePullPolicy: IfNotPresent
          resources:
            limits: {}
            requests: {}
          args:
            - --feature-gates=Topology=true
            - --default-fstype=ext4
          volumeMounts:
          - name: socket-dir
            mountPath: /run/csi

        - name: liveness-probe
          image: registry.k8s.io/sig-storage/livenessprobe:v2.13.1
          imagePullPolicy: IfNotPresent
          resources:
            limits: {}
            requests: {}
          volumeMounts:
          - mountPath: /run/csi
            name: socket-dir

        - name: hcloud-csi-driver
          image: docker.io/hetznercloud/hcloud-csi-driver:v2.9.0 # x-release-please-version
          imagePullPolicy: IfNotPresent
          command: [/bin/hcloud-csi-driver-controller]
          resources:
            limits: {}
            requests: {}
          ports:
            - name: healthz
              protocol: TCP
              containerPort: 9808
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /healthz
              port: healthz
          volumeMounts:
            - name: socket-dir
              mountPath: /run/csi

      volumes:
        - name: socket-dir
          emptyDir: {}
