hetzner/deployments/test-csi.yaml
kind: Pod
apiVersion: v1
metadata:
  name: csi-app
spec:
  nodeSelector:
    node-role.kubernetes.io/control-plane: ""
  tolerations:
    - key: "node-role.kubernetes.io/control-plane"
      effect: NoSchedule
  containers:
    - name: my-frontend
      image: alpine
      volumeMounts:
      - mountPath: "/data"
        name: my-csi-volume
      command: [ "sleep", "1000000" ]
  volumes:
    - name: my-csi-volume
      persistentVolumeClaim:
        claimName: csi-pvc
