hetzner/deployments/hcloud-autoscaler-result.yaml
---
# Source: cluster-autoscaler/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: "cluster-autoscaler-hcloud"
    app.kubernetes.io/name: "hetzner-cluster-autoscaler"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cluster-autoscaler-9.37.0"
  name: cluster-autoscaler-hcloud
  namespace: kube-system
spec:
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
      name: http
  selector:
    app.kubernetes.io/instance: "cluster-autoscaler-hcloud"
    app.kubernetes.io/name: "hetzner-cluster-autoscaler"
  type: "ClusterIP"
---
# Source: cluster-autoscaler/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    {}
  labels:
    app.kubernetes.io/instance: "cluster-autoscaler-hcloud"
    app.kubernetes.io/name: "hetzner-cluster-autoscaler"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cluster-autoscaler-9.37.0"
  name: cluster-autoscaler-hcloud
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: "cluster-autoscaler-hcloud"
      app.kubernetes.io/name: "hetzner-cluster-autoscaler"
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: "cluster-autoscaler-hcloud"
        app.kubernetes.io/name: "hetzner-cluster-autoscaler"
    spec:
      priorityClassName: "system-cluster-critical"
      dnsPolicy: "ClusterFirst"
      containers:
        - name: hetzner-cluster-autoscaler
          image: "registry.k8s.io/autoscaling/cluster-autoscaler:v1.30.0"
          imagePullPolicy: "IfNotPresent"
          command:
            - ./cluster-autoscaler
            - --cloud-provider=hetzner
            - --namespace=kube-system
            - --nodes=0:2:CPX31:FSN1:worker-fsn1
            - --logtostderr=true
            - --node-deletion-delay-timeout=10m0s
            - --regional=true
            - --scan-interval=3m
            - --stderrthreshold=info
            - --v=4
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8085
          ports:
            - containerPort: 8085
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
        node.cloudprovider.kubernetes.io/platform: hcloud
      serviceAccountName: cluster-autoscaler-hcloud
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
