hetzner/deployments/talos-cloud-controller-manager-result.yaml
---
# Source: talos-cloud-controller-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talos-cloud-controller-manager
  labels:
    helm.sh/chart: talos-cloud-controller-manager-0.3.1
    app.kubernetes.io/name: talos-cloud-controller-manager
    app.kubernetes.io/instance: talos-cloud-controller-manager
    app.kubernetes.io/version: "v1.6.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/port: "50258"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  namespace: kube-system
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: https
      port: 50258
      targetPort: 50258
      protocol: TCP
  selector:
        app.kubernetes.io/name: talos-cloud-controller-manager
        app.kubernetes.io/instance: talos-cloud-controller-manager
---
# Source: talos-cloud-controller-manager/templates/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: talos-cloud-controller-manager
  labels:
    helm.sh/chart: talos-cloud-controller-manager-0.3.1
    app.kubernetes.io/name: talos-cloud-controller-manager
    app.kubernetes.io/instance: talos-cloud-controller-manager
    app.kubernetes.io/version: "v1.6.0"
    app.kubernetes.io/managed-by: Helm
  namespace: kube-system
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: talos-cloud-controller-manager
      app.kubernetes.io/instance: talos-cloud-controller-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: talos-cloud-controller-manager
        app.kubernetes.io/instance: talos-cloud-controller-manager
    spec:
      serviceAccountName: talos-cloud-controller-manager
      securityContext:
        fsGroup: 10258
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 10258
        runAsNonRoot: true
        runAsUser: 10258
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      priorityClassName: system-cluster-critical
      containers:
        - name: talos-cloud-controller-manager
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/siderolabs/talos-cloud-controller-manager:edge"
          imagePullPolicy: IfNotPresent
          command: ["/talos-cloud-controller-manager"]
          args:
            - --v=4
            - --cloud-provider=talos
            - --cloud-config=/etc/talos/ccm-config.yaml
            - --controllers=cloud-node
            - --leader-elect-resource-name=cloud-controller-manager-talos
            - --use-service-account-credentials
            - --secure-port=50258
            - --authorization-always-allow-paths=/healthz,/livez,/readyz,/metrics
          ports:
            - containerPort: 50258
              name: https
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: cloud-config
              mountPath: /etc/talos
              readOnly: true
            - name: talos-secrets
              mountPath: /var/run/secrets/talos.dev
              readOnly: true
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/not-ready
          operator: Exists
      volumes:
        - name: cloud-config
          configMap:
            name: talos-cloud-controller-manager
            defaultMode: 416 # 0640
        - name: talos-secrets
          secret:
            secretName: talos-cloud-controller-manager-talos-secrets
            defaultMode: 416 # 0640
