hetzner/deployments/cilium-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: controlplane
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
    - toPorts:
        - ports:
          - port: "6443"
            protocol: TCP
          - port: "50000"
            protocol: TCP
    - toPorts:
        - ports:
          - port: "2379"
            protocol: TCP
          - port: "2380"
            protocol: TCP
          - port: "50001"
            protocol: TCP
      fromCIDR:
        - 172.16.0.0/16
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: common
spec:
  nodeSelector:
    matchLabels:
      {}
  ingress:
    - fromEntities:
        - host
        - remote-node
        - health
    - toPorts:
        - ports:
          - port: "53"
            protocol: ANY
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s-app": hubble-relay
      toPorts:
        - ports:
          - port: "4244"
            protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s-app": metrics-server
      toPorts:
        - ports:
          - port: "10250"
            protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": monitoring
            "app": prometheus
            "component": server
      toPorts:
        - ports:
          - port: "9090"
            protocol: TCP
          - port: "9091"
            protocol: TCP
          - port: "9153"
            protocol: TCP
          - port: "10254"
            protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: web
spec:
  nodeSelector:
    matchLabels:
      project.io/node-pool: web
  ingress:
    - toPorts:
        - ports:
          - port: "80"
            protocol: TCP
          - port: "443"
            protocol: TCP
